Minor improvement in getAllTutors method